# project2_Ovsyannikov_Sergey_M25-555

./: .gitignore  README.md  db_meta.json  pyproject.toml
data/: users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
